--- a/js/package.json
+++ b/js/package.json
@@ -10,8 +10,7 @@
     "test": "lerna run test"
   },
   "devDependencies": {
-    "lerna": "^3.20.2",
-    "yarn-check": "^0.0.3"
+    "lerna": "^3.20.2"
   },
   "dependencies": {}
 }
